[workspace]
resolver = "2"
members = [
    "sui-move",
    "sui-move-derive",
    "sui-move-call",
    "sui-move-ptb",
    "sui-move-runtime",
    "sui-move-codegen",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bcs = "0.1.6"
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"] }
sui-rpc = { git = "https://github.com/mystenlabs/sui-rust-sdk" }
sui-crypto = { git = "https://github.com/mystenlabs/sui-rust-sdk" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
