[package]
name = "sui-move-call"
version.workspace = true
edition.workspace = true
description = "Typed call arguments and call specifications for Move calls on Sui."
readme = "README.md"

[dependencies]
sui-move = { path = "../sui-move" }
serde = { workspace = true, features = ["derive"] }
bcs = { workspace = true }
thiserror = { workspace = true }
sui-sdk-types = { workspace = true }

[dev-dependencies]
sui-move = { path = "../sui-move", features = ["derive"] }

