[package]
name = "sui-move-codegen"
version = "0.1.0"
edition = "2021"
description = "Generate typed Rust bindings (types + CallSpec builders) from Sui Move package metadata."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sui-move-codegen"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
sui-rpc = { workspace = true }
sui-sdk-types = { workspace = true }
