[package]
name = "sui-move-codegen"
version.workspace = true
edition.workspace = true
description = "Generate typed Rust bindings (types + CallSpec builders) from Sui Move package metadata."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
sui-rpc = { workspace = true }
sui-sdk-types = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
