[package]
name = "sui-move-derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for sui-move typed structs."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sui-move-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
sui-move = { path = "../sui-move" }
