[package]
name = "sui-move-ptb"
version = "0.1.0"
edition = "2021"
description = "Programmable-transaction builder for typed Move calls on Sui."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sui-move-ptb"

[dependencies]
sui-move-call = { version = "0.1.0", path = "../sui-move-call" }
sui-sdk-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sui-move = { path = "../sui-move", features = ["derive"] }
