[package]
name = "sui-move-ptb"
version = "0.1.0"
edition = "2021"
description = "Programmable-transaction builder for typed Move calls on Sui."
readme = "README.md"

[dependencies]
sui-move = { path = "../sui-move" }
sui-move-call = { path = "../sui-move-call" }
sui-sdk-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sui-move = { path = "../sui-move", features = ["derive"] }
