[package]
name = "sui-move-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime layer for typed Move interactions on Sui (submit, wait, auto-update handles)."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
sui-sdk-types = { workspace = true }
serde = { workspace = true }
sui-move = { version = "0.1.0", path = "../sui-move" }
sui-move-call = { version = "0.1.0", path = "../sui-move-call" }
sui-move-ptb = { version = "0.1.0", path = "../sui-move-ptb" }
sui-rpc = { workspace = true }
sui-crypto = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
sui-move = { path = "../sui-move", features = ["derive"] }
