[package]
name = "sui-move"
version = "0.1.0"
edition = "2021"
description = "Move-shaped typed layer for Rust, built on top of sui-sdk-types."
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
bcs = { workspace = true }
sui-sdk-types = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
