[package]
name = "sui-move"
version.workspace = true
edition.workspace = true
description = "Move-shaped typed layer for Rust, built on top of sui-sdk-types."
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
bcs = { workspace = true }
sui-sdk-types = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
sui-move-derive = { version = "0.1.0", path = "../sui-move-derive", optional = true }

[features]
default = []
derive = ["dep:sui-move-derive"]

[[example]]
name = "derive_struct"
path = "examples/derive_struct.rs"
required-features = ["derive"]
